Fixed layout issues

--- a/public/stylesheets/landing-page.less
+++ b/public/stylesheets/landing-page.less
@@ -20,13 +20,14 @@ body {
 
 	.title {
 		width: 512px;
+		max-width: 100%;
 		height: 256px;
 		margin: 0 auto 20px auto;
 		z-index: 1;
 		position: relative;
-		background: url("");
 		.at2x('/images/logo.png', 100%);
 		background-size: 100%;
+		background-repeat: no-repeat;
 	}
 
 	.buttons {
