--- a/public/stylesheets/wiki_custom.less
+++ b/public/stylesheets/wiki_custom.less
@@ -2,6 +2,7 @@
 Custom style used for the wiki
 */
 @import "fonts";
+@import "retina";
 
 @bnet-color: #0072A8;
 @selection-background-color: #446779;
@@ -88,20 +89,20 @@ body {
 	position: relative;
 	padding: 10px 0 10px 50px;
 
-	img {
+	&::before{
+		content: "";
+		width: 40px;
+		height: 40px;
 		position: absolute;
-		top: 0;
 		left: 0;
-		width: 42px;
-		height: 42px;
+		top: 0;
+		.at2x("/images/icons/trp3_wiki.png", 100%);
+		background-size: 100%;
 	}
 
-	&:hover {
-		img {
-			filter: brightness(150%);
-		}
+	&:hover{
+		filter: brightness(150%);
 	}
-
 }
 
 .home-categories .panel .page {
